# agda-tiling

./: .gitignore  02-Tiling-completed.agda  README.md  tiling.agda-lib
examples/: Main.agda  Makefile  example.agda-lib  example.cabal
src/: Main.agda
src/Data/: Image.agda  Pixel.agda
src/Data/Image/: IO.agda  Pixel.agda
src/Data/Image/IO/: Primitive.agda
src/Data/Nat/Bounded/: Base.agda  Properties.agda
src/Data/Pixel/: Tile.agda
